; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_sched_fair.c_calc_delta_fair.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_sched_fair.c_calc_delta_fair.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sched_entity = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@NICE_0_LOAD = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, %struct.sched_entity*)* @calc_delta_fair to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @calc_delta_fair(i64 %0, %struct.sched_entity* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca %struct.sched_entity*, align 8
  store i64 %0, i64* %3, align 8
  store %struct.sched_entity* %1, %struct.sched_entity** %4, align 8
  %5 = load %struct.sched_entity*, %struct.sched_entity** %4, align 8
  %6 = getelementptr inbounds %struct.sched_entity, %struct.sched_entity* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @NICE_0_LOAD, align 8
  %10 = icmp ne i64 %8, %9
  %11 = zext i1 %10 to i32
  %12 = call i64 @unlikely(i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %20

14:                                               ; preds = %2
  %15 = load i64, i64* %3, align 8
  %16 = load i64, i64* @NICE_0_LOAD, align 8
  %17 = load %struct.sched_entity*, %struct.sched_entity** %4, align 8
  %18 = getelementptr inbounds %struct.sched_entity, %struct.sched_entity* %17, i32 0, i32 0
  %19 = call i64 @calc_delta_mine(i64 %15, i64 %16, %struct.TYPE_2__* %18)
  store i64 %19, i64* %3, align 8
  br label %20

20:                                               ; preds = %14, %2
  %21 = load i64, i64* %3, align 8
  ret i64 %21
}

declare dso_local i64 @unlikely(i32) #1

declare dso_local i64 @calc_delta_mine(i64, i64, %struct.TYPE_2__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
